--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "npx tsc && node dist/index.js",
+    "start": "npx tsc && node build/index.js",
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
