--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "npx tsc && node build/index.js",
+    "start": "npx tsc && node build/src/index.js",
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.2",
+    "nodemon": "^3.0.2",
     "prisma": "^5.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
