--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "@types/node": "^20.10.2",
     "nodemon": "^3.0.2",
     "prisma": "^5.6.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "typescript": "^5.3.3"
   }
 }
