--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "populate": "ts-node src/population/populate.ts",
     "prisma:dev:deploy": "npx prisma migrate deploy",
     "db:dev:rm": "docker compose rm -s -f -v",
-    "db:dev:up": "docker compose up -d && sleep 1 && npm run prisma:dev:deploy",
+    "db:dev:up": "docker compose up -d && sleep 1 && npm run prisma:dev:deploy && npm run populate",
     "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up"
   },
   "keywords": [],
